about to be ready

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -8,6 +8,8 @@ development:
   options:
     raise_not_found_error: false
 test:
+  options:
+    raise_not_found_error: false
   sessions:
     default:
       database: cherche_appart_test
