--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,3 +1,15 @@
+production:
+  sessions:
+    default:
+      uri: <%= ENV['MONGOLAB_URI'] %>
+  options:
+    raise_not_found_error: false
+staging:
+  sessions:
+    default:
+      uri: <%= ENV['MONGOLAB_URI'] %>
+  options:
+    raise_not_found_error: false
 development:
   sessions:
     default:
