--- a/FrontApp/package.json
+++ b/FrontApp/package.json
@@ -6,6 +6,7 @@
     "bower": "~1.3.5",
     "coffee-script": "~1.7.1",
     "gulp": "~3.8.7",
+    "gulp-batch": "^1.0.5",
     "gulp-changed": "~0.4.0",
     "gulp-clean": "^0.3.1",
     "gulp-coffee": "~2.0.1",
@@ -28,11 +29,14 @@
     "karma": "~0.12.16",
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.1.4",
+    "minimatch": "^2.0.1",
     "path": "^0.11.14",
     "phantomjs": "^1.9.15",
     "proxy-middleware": "^0.10.0",
     "stream-series": "^0.1.1",
-    "url": "^0.10.2"
+    "url": "^0.10.2",
+    "vinyl": "^0.4.6",
+    "vinyl-fs": "^0.3.13"
   },
   "devDependencies": {
     "gulp-angular-templatecache": "^1.5.0",
