--- a/FrontApp/bower.json
+++ b/FrontApp/bower.json
@@ -11,7 +11,8 @@
     "angular-ui-router": "~0.2.7",
     "angular-material": "~0.7.0",
     "restangular": "~1.4.0",
-    "angular-typeahead": "~0.2.1"
+    "angular-typeahead": "~0.2.1",
+    "hammerjs": "~2.0.4"
   },
   "dependencies": {},
   "resolutions": {
