--- a/FrontApp/package.json
+++ b/FrontApp/package.json
@@ -6,6 +6,7 @@
     "bower": "~1.3.5",
     "coffee-script": "~1.7.1",
     "gulp": "~3.8.7",
+    "gulp-add-src": "^0.2.0",
     "gulp-batch": "^1.0.5",
     "gulp-changed": "~0.4.0",
     "gulp-clean": "^0.3.1",
