--- a/FrontApp/bower.json
+++ b/FrontApp/bower.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {},
   "resolutions": {
-    "angular": "1.3.13",
+    "angular": "~1.3.13",
     "angular-bootstrap": "~0.12.0"
   }
 }
